...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userStatus"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/sharedDreamsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:backgroundTint="@color/byzantine"
        android:fontFamily="casual"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_text"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/dreamLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:backgroundTint="@color/rosewood"
        android:fontFamily="casual"
...
